--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,14 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
+  color: brown;
   -webkit-text-stroke: 2px black;
 }
 
 h2 {
   text-align: center;
   font-size: 40px;
-  color: white;
+  color: blue;
   -webkit-text-stroke: 1px black;
 }
 
@@ -31,7 +31,7 @@ h2 {
 }
 
 #timer{
-    color: white;
+    color: blue;
 }
 
 .grid {
