--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true")
+    no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  z-index:0;
+  z-index: 0;
   overflow: hidden;
 }
 
@@ -14,24 +15,24 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: brown;
+  color: rgb(172, 75, 161);
   -webkit-text-stroke: 2px black;
 }
 
 h2 {
   text-align: center;
   font-size: 40px;
-  color: blue;
+  color: rgb(175, 17, 17);
   -webkit-text-stroke: 1px black;
 }
 
 #start {
-    text-align: center;
-    font-size: 30px;
+  text-align: center;
+  font-size: 30px;
 }
 
-#timer{
-    color: blue;
+#timer {
+  color: black;
 }
 
 .grid {
@@ -40,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url('./assets/mallet.png'), pointer;
+  /*cursor: url('./assets/mallet.png'), pointer;*/
 }
 
 .hole {
@@ -51,21 +52,23 @@ h2 {
 
 .hole:after {
   display: block;
-  /*background: url("./assets/hole.png") bottom center no-repeat;*/
-  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
-  background-size:contain;
-  content:'';
+  /*background: url("./assets/hole.jpg") bottom center no-repeat;*/
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true")
+    bottom center no-repeat;
+  background-size: contain;
+  content: "";
   width: 100%;
   height: 100%;
   position: absolute;
   bottom: -40%;
   z-index: 2;
-  pointer-events:none;
+  pointer-events: none;
 }
 
 .mole {
   /*background:url('./assets/mole.jpg') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.jpg?raw=true') bottom center no-repeat;
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true")
+    bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
@@ -73,7 +76,7 @@ h2 {
   height: 100%;
   /*transition: transform 0.5s;*/
   transition: all 1s;
-  pointer-events:auto;
+  pointer-events: auto;
 }
 
 .hole.show .mole {
