--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url('./assets/mallet.png'), pointer;
 }
 
 .hole {
@@ -53,7 +53,7 @@ h2 {
 .hole:after {
   display: block;
   /*background: url("./assets/hole.jpg") bottom center no-repeat;*/
-  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true")
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.jpg?raw=true")
     bottom center no-repeat;
   background-size: contain;
   content: "";
@@ -67,7 +67,7 @@ h2 {
 
 .mole {
   /*background:url('./assets/mole.jpg') bottom center no-repeat;*/
-  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true")
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.jpg?raw=true")
     bottom center no-repeat;
   background-size: 40%;
   position: absolute;
