--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,7 @@ h2 {
 .hole:after {
   display: block;
   /*background: url("./assets/hole.jpg") bottom center no-repeat;*/
-  background: url("https://github.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/dirt.jpg?raw=true")
-    bottom center no-repeat;
+  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
   background-size: contain;
   content: "";
   width: 100%;
@@ -67,9 +66,7 @@ h2 {
 
 .mole {
   /*background:url('./assets/mole.jpg') bottom center no-repeat;*/
-  background: url("https://github.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/mole.jpg?raw=true")
-                  
-    bottom center no-repeat;
+  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
