--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ html {
 h1 {
   text-align: center;
   font-size: 90px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Times New Roman", "Comic Sans", cursive;
   color: rgb(172, 75, 161);
   -webkit-text-stroke: 2px black;
 }
