--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url('./assets/mallet.png'), pointer;
+  cursor: url(https://raw.githubusercontent.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/main/assets/mallet.png), pointer;
 }
 
 .hole {
@@ -72,12 +72,12 @@ h2 {
   top: 100%;
   width: 100%;
   height: 100%;
-  /*transition: transform 0.5s;*/
+  transition: transform 0.5s;
   transition: all 1s;
   pointer-events: auto;
 }
 
 .hole.show .mole {
   top: 0;
-  /*transform: scale(1.1);*/
+ transform: scale(1.1);
 }
