--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url(https://raw.githubusercontent.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/main/assets/mallet.png), pointer;
+  cursor: url(https://raw.githubusercontent.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/main/assets/png-transparent-white-bread-bread-baked-goods-food-whole-grain-thumbnail.png), pointer;
 }
 
 .hole {
@@ -65,8 +65,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.jpg') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  /*background:url('./assets/png-clipart-waving-bear-bear-brown-bear.png') bottom center no-repeat;*/
+  background:url('https://raw.githubusercontent.com/Jho-aude/js-dev-final-capstone-starter-whack-a-mole/main/assets/png-clipart-waving-bear-bear-brown-bear.png') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
