--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url("./assets/png-transparent-white-bread-bread-baked-goods-food-whole-grain-thumbnail.png"), pointer;
+  cursor: url("./assets/mallet.png"), pointer;
 }
 
 .hole {
